--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Home</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.png" />
-    <link rel="stylesheet" href="/style_home.css" />
-    <link rel="stylesheet" href="/style_general.css" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.png" />
+    <link rel="stylesheet" href="style_home.css" />
+    <link rel="stylesheet" href="style_general.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,19 +22,19 @@
     <nav class="navbar">
       <ul>
         <li id="home" class="active">
-          <a href="/index.html">Home</a>
+          <a href="./index.html">Home</a>
         </li>
-        <li><a href="/ranks.html">Ranks</a></li>
-        <li><a href="/heroes.html">Heroes</a></li>
-        <li><a href="/roles.html">Roles</a></li>
-        <li><a href="/battlefeild.html">Battlefield</a></li>
-        <li><a href="/modes.html">Modes</a></li>
+        <li><a href="./ranks.html">Ranks</a></li>
+        <li><a href="./heroes.html">Heroes</a></li>
+        <li><a href="./roles.html">Roles</a></li>
+        <li><a href="./battlefeild.html">Battlefield</a></li>
+        <li><a href="./modes.html">Modes</a></li>
       </ul>
     </nav>
     <!-- navbar -->
 
     <div id="main">
-      <img id="logo" src="/images/logo2.png" alt="MLBB logo" />
+      <img id="logo" src="images/logo2.png" alt="MLBB logo" />
       <div id="text">
         <p id="para1">
           Mobile Legends: Bang Bang (MLBB) is a mobile multiplayer online battle
