--- a/heroes.html
+++ b/heroes.html
@@ -10,8 +10,8 @@
 
     <title>Heroes</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.png" />
-    <link rel="stylesheet" href="/style_heroes.css" />
-    <link rel="stylesheet" href="/style_general.css" />
+    <link rel="stylesheet" href="style_heroes.css" />
+    <link rel="stylesheet" href="style_general.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,13 +23,13 @@
     <nav class="navbar">
       <ul>
         <li id="home">
-          <a href="/index.html">Home</a>
+          <a href="./index.html">Home</a>
         </li>
-        <li><a href="/ranks.html">Ranks</a></li>
-        <li class="active"><a href="/heroes.html">Heroes</a></li>
-        <li><a href="/roles.html">Roles</a></li>
-        <li><a href="/battlefeild.html">Battlefield</a></li>
-        <li><a href="/modes.html">Modes</a></li>
+        <li><a href="./ranks.html">Ranks</a></li>
+        <li class="active"><a href="./heroes.html">Heroes</a></li>
+        <li><a href="./roles.html">Roles</a></li>
+        <li><a href="./battlefeild.html">Battlefield</a></li>
+        <li><a href="./modes.html">Modes</a></li>
       </ul>
     </nav>
     <!-- navbar -->
@@ -49,32 +49,32 @@
         <div id="tank">
           <div class="slideshow-container">
             <div class="mySlides1 fade">
-              <img src="/images/Heroes/Tank/tigreal.jpg" style="width: 100%" />
+              <img src="images/Heroes/Tank/tigreal.jpg" style="width: 100%" />
               <div class="text">Tigreal</div>
             </div>
 
             <div class="mySlides1 fade">
-              <img src="/images/Heroes/Tank/franco.jpg" style="width: 100%" />
+              <img src="images/Heroes/Tank/franco.jpg" style="width: 100%" />
               <div class="text">Franko</div>
             </div>
 
             <div class="mySlides1 fade">
-              <img src="/images/Heroes/Tank/akai.jpg" style="width: 100%" />
+              <img src="images/Heroes/Tank/akai.jpg" style="width: 100%" />
               <div class="text">Akai</div>
             </div>
 
             <div class="mySlides1 fade">
-              <img src="/images/Heroes/Tank/alice.jpg" style="width: 100%" />
+              <img src="images/Heroes/Tank/alice.jpg" style="width: 100%" />
               <div class="text">Alice</div>
             </div>
 
             <div class="mySlides1 fade">
-              <img src="/images/Heroes/Tank/khufra.jpg" style="width: 100%" />
+              <img src="images/Heroes/Tank/khufra.jpg" style="width: 100%" />
               <div class="text">Khufra</div>
             </div>
 
             <div class="mySlides1 fade">
-              <img src="/images/Heroes/Tank/lolita.jpg" style="width: 100%" />
+              <img src="images/Heroes/Tank/lolita.jpg" style="width: 100%" />
               <div class="text">Lolita</div>
             </div>
 
@@ -98,20 +98,20 @@
           <div class="slideshow-container">
             <div class="mySlides2 fade">
               <img
-                src="/images/Heroes/Fighter/dyrroth.jpg"
+                src="images/Heroes/Fighter/dyrroth.jpg"
                 style="width: 100%"
               />
               <div class="text">Dyrroth</div>
             </div>
 
             <div class="mySlides2 fade">
-              <img src="/images/Heroes/Fighter/freya.jpg" style="width: 100%" />
+              <img src="images/Heroes/Fighter/freya.jpg" style="width: 100%" />
               <div class="text">Freya</div>
             </div>
 
             <div class="mySlides2 fade">
               <img
-                src="/images/Heroes/Fighter/alucard.jpg"
+                src="images/Heroes/Fighter/alucard.jpg"
                 style="width: 100%"
               />
               <div class="text">Alucard</div>
@@ -119,7 +119,7 @@
 
             <div class="mySlides2 fade">
               <img
-                src="/images/Heroes/Fighter/martis.jpg"
+                src="images/Heroes/Fighter/martis.jpg"
                 style="width: 100%"
               />
               <div class="text">Martis</div>
@@ -127,14 +127,14 @@
 
             <div class="mySlides2 fade">
               <img
-                src="/images/Heroes/Fighter/guinevere.jpg"
+                src="images/Heroes/Fighter/guinevere.jpg"
                 style="width: 100%"
               />
               <div class="text">Guinevere</div>
             </div>
 
             <div class="mySlides2 fade">
-              <img src="/images/Heroes/Fighter/ruby.jpg" style="width: 100%" />
+              <img src="images/Heroes/Fighter/ruby.jpg" style="width: 100%" />
               <div class="text">Ruby</div>
             </div>
 
@@ -148,7 +148,7 @@
           <div class="slideshow-container">
             <div class="mySlides3 fade">
               <img
-                src="/images/Heroes/Assassin/fanny.jpg"
+                src="images/Heroes/Assassin/fanny.jpg"
                 style="width: 100%"
               />
               <div class="text">Fanny</div>
@@ -156,7 +156,7 @@
 
             <div class="mySlides3 fade">
               <img
-                src="/images/Heroes/Assassin/benedetta.jpg"
+                src="images/Heroes/Assassin/benedetta.jpg"
                 style="width: 100%"
               />
               <div class="text">Benedetta</div>
@@ -164,20 +164,20 @@
 
             <div class="mySlides3 fade">
               <img
-                src="/images/Heroes/Assassin/hayabusa.jpg"
+                src="images/Heroes/Assassin/hayabusa.jpg"
                 style="width: 100%"
               />
               <div class="text">Hayabusa</div>
             </div>
 
             <div class="mySlides3 fade">
-              <img src="/images/Heroes/Assassin/ling.jpg" style="width: 100%" />
+              <img src="images/Heroes/Assassin/ling.jpg" style="width: 100%" />
               <div class="text">Ling</div>
             </div>
 
             <div class="mySlides3 fade">
               <img
-                src="/images/Heroes/Assassin/gusion.jpg"
+                src="images/Heroes/Assassin/gusion.jpg"
                 style="width: 100%"
               />
               <div class="text">Gusion</div>
@@ -191,27 +191,27 @@
         <div id="mm">
           <div class="slideshow-container">
             <div class="mySlides4 fade">
-              <img src="/images/Heroes/MM/layla.jpg" style="width: 100%" />
+              <img src="images/Heroes/MM/layla.jpg" style="width: 100%" />
               <div class="text">Layla</div>
             </div>
 
             <div class="mySlides4 fade">
-              <img src="/images/Heroes/MM/claude.jpg" style="width: 100%" />
+              <img src="images/Heroes/MM/claude.jpg" style="width: 100%" />
               <div class="text">Claude</div>
             </div>
 
             <div class="mySlides4 fade">
-              <img src="/images/Heroes/MM/wanwan.jpg" style="width: 100%" />
+              <img src="images/Heroes/MM/wanwan.jpg" style="width: 100%" />
               <div class="text">Wanwan</div>
             </div>
 
             <div class="mySlides4 fade">
-              <img src="/images/Heroes/MM/hanabi.jpg" style="width: 100%" />
+              <img src="images/Heroes/MM/hanabi.jpg" style="width: 100%" />
               <div class="text">Hanabi</div>
             </div>
 
             <div class="mySlides4 fade">
-              <img src="/images/Heroes/MM/brody.jpg" style="width: 100%" />
+              <img src="images/Heroes/MM/brody.jpg" style="width: 100%" />
               <div class="text">Brody</div>
             </div>
 
@@ -224,27 +224,27 @@
         <div id="mage">
           <div class="slideshow-container">
             <div class="mySlides5 fade">
-              <img src="/images/Heroes/Mage/lunox.jpg" style="width: 100%" />
+              <img src="images/Heroes/Mage/lunox.jpg" style="width: 100%" />
               <div class="text">Lunox</div>
             </div>
 
             <div class="mySlides5 fade">
-              <img src="/images/Heroes/Mage/vale.jpg" style="width: 100%" />
+              <img src="images/Heroes/Mage/vale.jpg" style="width: 100%" />
               <div class="text">Vale</div>
             </div>
 
             <div class="mySlides5 fade">
-              <img src="/images/Heroes/Mage/valir.jpg" style="width: 100%" />
+              <img src="images/Heroes/Mage/valir.jpg" style="width: 100%" />
               <div class="text">Valir</div>
             </div>
 
             <div class="mySlides5 fade">
-              <img src="/images/Heroes/Mage/kagura.jpg" style="width: 100%" />
+              <img src="images/Heroes/Mage/kagura.jpg" style="width: 100%" />
               <div class="text">Kagura</div>
             </div>
 
             <div class="mySlides5 fade">
-              <img src="/images/Heroes/Mage/nana.jpg" style="width: 100%" />
+              <img src="images/Heroes/Mage/nana.jpg" style="width: 100%" />
               <div class="text">Nana</div>
             </div>
 
@@ -257,22 +257,22 @@
         <div id="supp">
           <div class="slideshow-container">
             <div class="mySlides6 fade">
-              <img src="/images/Heroes/Supp/mathilda.jpg" style="width: 100%" />
+              <img src="images/Heroes/Supp/mathilda.jpg" style="width: 100%" />
               <div class="text">Mathilda</div>
             </div>
 
             <div class="mySlides6 fade">
-              <img src="/images/Heroes/Supp/diggie.jpg" style="width: 100%" />
+              <img src="images/Heroes/Supp/diggie.jpg" style="width: 100%" />
               <div class="text">Diggie</div>
             </div>
 
             <div class="mySlides6 fade">
-              <img src="/images/Heroes/Supp/floryn.jpg" style="width: 100%" />
+              <img src="images/Heroes/Supp/floryn.jpg" style="width: 100%" />
               <div class="text">Floryn</div>
             </div>
 
             <div class="mySlides6 fade">
-              <img src="/images/Heroes/Supp/estes.jpg" style="width: 100%" />
+              <img src="images/Heroes/Supp/estes.jpg" style="width: 100%" />
               <div class="text">Estes</div>
             </div>
 
