--- a/ranks.html
+++ b/ranks.html
@@ -8,9 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Ranks</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.png" />
-    <link rel="stylesheet" href="/style_ranks.css" />
-    <link rel="stylesheet" href="/style_general.css" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.png" />
+    <link rel="stylesheet" href="style_ranks.css" />
+    <link rel="stylesheet" href="style_general.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,13 +22,13 @@
     <nav class="navbar">
       <ul>
         <li id="home">
-          <a href="/index.html">Home</a>
+          <a href="./index.html">Home</a>
         </li>
-        <li class="active"><a href="/ranks.html">Ranks</a></li>
-        <li><a href="/heroes.html">Heroes</a></li>
-        <li><a href="/roles.html">Roles</a></li>
-        <li><a href="/battlefeild.html">Battlefield</a></li>
-        <li><a href="/modes.html">Modes</a></li>
+        <li class="active"><a href="./ranks.html">Ranks</a></li>
+        <li><a href="./heroes.html">Heroes</a></li>
+        <li><a href="./roles.html">Roles</a></li>
+        <li><a href="./battlefeild.html">Battlefield</a></li>
+        <li><a href="./modes.html">Modes</a></li>
       </ul>
     </nav>
     <!-- navbar -->
@@ -37,51 +37,51 @@
       <div id="new">
         <img
           class="icon"
-          src="/images/Rank/New/warrior_new.png"
+          src="images/Rank/New/warrior_new.png"
           alt="Warrior"
         />
 
-        <img class="star" src="/images/Rank/point.png" alt="*" />
+        <img class="star" src="images/Rank/point.png" alt="*" />
 
-        <img class="icon" src="/images/Rank/New/elite_new.png" alt="Elite" />
-        <img class="star" src="/images/Rank/point.png" alt="*" />
+        <img class="icon" src="images/Rank/New/elite_new.png" alt="Elite" />
+        <img class="star" src="images/Rank/point.png" alt="*" />
 
-        <img class="icon" src="/images/Rank/New/master_new.png" alt="Master" />
-        <img class="star" src="/images/Rank/point.png" alt="*" />
+        <img class="icon" src="images/Rank/New/master_new.png" alt="Master" />
+        <img class="star" src="images/Rank/point.png" alt="*" />
 
         <img
           class="icon"
-          src="/images/Rank/New/grandmaster_new.png"
+          src="images/Rank/New/grandmaster_new.png"
           alt="Grandmaster"
         />
-        <img class="star" src="/images/Rank/point.png" alt="*" />
+        <img class="star" src="images/Rank/point.png" alt="*" />
 
-        <img class="icon" src="/images/Rank/New/epic_new.png" alt="Epic" />
-        <img class="star" src="/images/Rank/point.png" alt="*" />
+        <img class="icon" src="images/Rank/New/epic_new.png" alt="Epic" />
+        <img class="star" src="images/Rank/point.png" alt="*" />
 
-        <img class="icon" src="/images/Rank/New/legend_new.png" alt="Legeng" />
-        <img class="star" src="/images/Rank/point.png" alt="*" />
+        <img class="icon" src="images/Rank/New/legend_new.png" alt="Legeng" />
+        <img class="star" src="images/Rank/point.png" alt="*" />
 
-        <img class="icon" src="/images/Rank/New/mythic_new.png" alt="Mythic" />
-        <img class="star" src="/images/Rank/point.png" alt="*" />
+        <img class="icon" src="images/Rank/New/mythic_new.png" alt="Mythic" />
+        <img class="star" src="images/Rank/point.png" alt="*" />
 
         <img
           class="icon"
-          src="/images/Rank/New/honor_new.png"
+          src="images/Rank/New/honor_new.png"
           alt="Mythical Honor"
         />
-        <img class="star" src="/images/Rank/point.png" alt="*" />
+        <img class="star" src="images/Rank/point.png" alt="*" />
 
         <img
           class="icon"
-          src="/images/Rank/New/glory_new.png"
+          src="images/Rank/New/glory_new.png"
           alt="Mythical Glory"
         />
-        <img class="star" src="/images/Rank/point.png" alt="*" />
+        <img class="star" src="images/Rank/point.png" alt="*" />
 
         <img
           class="icon"
-          src="/images/Rank/New/immortal_new.png"
+          src="images/Rank/New/immortal_new.png"
           alt="Mythical Immortal"
         />
         <p>Warrior III-I</p>
@@ -109,51 +109,51 @@
       <div id="old">
         <img
           class="icon"
-          src="/images/Rank/Old/warrior_old.webp"
+          src="images/Rank/Old/warrior_old.webp"
           alt="Warrior"
         />
 
-        <img class="star" src="/images/Rank/point.png" alt="*" />
+        <img class="star" src="images/Rank/point.png" alt="*" />
 
-        <img class="icon" src="/images/Rank/Old/elite.webp" alt="Elite" />
-        <img class="star" src="/images/Rank/point.png" alt="*" />
+        <img class="icon" src="images/Rank/Old/elite.webp" alt="Elite" />
+        <img class="star" src="images/Rank/point.png" alt="*" />
 
-        <img class="icon" src="/images/Rank/Old/master_old.webp" alt="Master" />
-        <img class="star" src="/images/Rank/point.png" alt="*" />
+        <img class="icon" src="images/Rank/Old/master_old.webp" alt="Master" />
+        <img class="star" src="images/Rank/point.png" alt="*" />
 
         <img
           class="icon"
-          src="/images/Rank/Old/grandmaster_old.webp"
+          src="images/Rank/Old/grandmaster_old.webp"
           alt="Grandmaster"
         />
-        <img class="star" src="/images/Rank/point.png" alt="*" />
+        <img class="star" src="images/Rank/point.png" alt="*" />
 
-        <img class="icon" src="/images/Rank/Old/epic_old.webp" alt="Epic" />
-        <img class="star" src="/images/Rank/point.png" alt="*" />
+        <img class="icon" src="images/Rank/Old/epic_old.webp" alt="Epic" />
+        <img class="star" src="images/Rank/point.png" alt="*" />
 
-        <img class="icon" src="/images/Rank/Old/legend_old.webp" alt="Legeng" />
-        <img class="star" src="/images/Rank/point.png" alt="*" />
+        <img class="icon" src="images/Rank/Old/legend_old.webp" alt="Legeng" />
+        <img class="star" src="images/Rank/point.png" alt="*" />
 
-        <img class="icon" src="/images/Rank/Old/mythic.webp" alt="Mythic" />
-        <img class="star" src="/images/Rank/point.png" alt="*" />
+        <img class="icon" src="images/Rank/Old/mythic.webp" alt="Mythic" />
+        <img class="star" src="images/Rank/point.png" alt="*" />
 
         <img
           class="icon"
-          src="/images/Rank/Old/honor_old.webp"
+          src="images/Rank/Old/honor_old.webp"
           alt="Mythical Honor"
         />
-        <img class="star" src="/images/Rank/point.png" alt="*" />
+        <img class="star" src="images/Rank/point.png" alt="*" />
 
         <img
           class="icon"
-          src="/images/Rank/Old/glory_old.webp"
+          src="images/Rank/Old/glory_old.webp"
           alt="Mythical Glory"
         />
-        <img class="star" src="/images/Rank/point.png" alt="*" />
+        <img class="star" src="images/Rank/point.png" alt="*" />
 
         <img
           class="icon"
-          src="/images/Rank/Old/immortal_old.webp"
+          src="images/Rank/Old/immortal_old.webp"
           alt="Mythical Immortal"
         />
         <p>Warrior III-I</p>
