--- a/heroes.html
+++ b/heroes.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Heroes</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.png" />
     <link rel="stylesheet" href="style_heroes.css" />
     <link rel="stylesheet" href="style_general.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
