--- a/roles.html
+++ b/roles.html
@@ -8,9 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Roles</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.png" />
-    <link rel="stylesheet" href="/style_roles.css" />
-    <link rel="stylesheet" href="/style_general.css" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.png" />
+    <link rel="stylesheet" href="style_roles.css" />
+    <link rel="stylesheet" href="style_general.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,13 +22,13 @@
     <nav class="navbar">
       <ul>
         <li id="home">
-          <a href="/index.html">Home</a>
+          <a href="./index.html">Home</a>
         </li>
-        <li><a href="/ranks.html">Ranks</a></li>
-        <li><a href="/heroes.html">Heroes</a></li>
-        <li class="active"><a href="/roles.html">Roles</a></li>
-        <li><a href="/battlefeild.html">Battlefield</a></li>
-        <li><a href="/modes.html">Modes</a></li>
+        <li><a href="./ranks.html">Ranks</a></li>
+        <li><a href="./heroes.html">Heroes</a></li>
+        <li class="active"><a href="./roles.html">Roles</a></li>
+        <li><a href="./battlefeild.html">Battlefield</a></li>
+        <li><a href="./modes.html">Modes</a></li>
       </ul>
     </nav>
     <!-- navbar -->
@@ -38,35 +38,35 @@
           ><img
             class="map_animation"
             id="gold_b"
-            src="/images/lines/gold.png"
+            src="images/lines/gold.png"
             alt="gold lane"
         /></a>
         <a href="#exp"
           ><img
             class="map_animation"
             id="exp_b"
-            src="/images/lines/exp.png"
+            src="images/lines/exp.png"
             alt="exp lane"
         /></a>
         <a href="#jgl"
           ><img
             class="map_animation"
             id="jgl_b"
-            src="/images/lines/jgl.png"
+            src="images/lines/jgl.png"
             alt="jungle"
         /></a>
         <a href="#mid"
           ><img
             class="map_animation"
             id="mid_b"
-            src="/images/lines/mid.png"
+            src="images/lines/mid.png"
             alt="mid lane"
         /></a>
         <a href="#roam"
           ><img
             class="map_animation"
             id="roam_b"
-            src="/images/lines/roam.png"
+            src="images/lines/roam.png"
             alt="roam"
         /></a>
       </div>
@@ -76,7 +76,7 @@
       <div class="container">
         <div>
           <a id="mid"
-            ><img class="icon" src="/images/lines/mid.png" alt="mid lane" />
+            ><img class="icon" src="images/lines/mid.png" alt="mid lane" />
           </a>
           <h2>Mid Lane</h2>
           <p>
@@ -116,7 +116,7 @@
       <div class="container">
         <div>
           <a id="gold"
-            ><img class="icon" src="/images/lines/gold.png" alt="gold lane"
+            ><img class="icon" src="images/lines/gold.png" alt="gold lane"
           /></a>
 
           <h2>Gold Lane</h2>
@@ -162,7 +162,7 @@
       <div class="container">
         <div>
           <a id="exp">
-            <img class="icon" src="/images/lines/exp.png" alt="exp lane" />
+            <img class="icon" src="images/lines/exp.png" alt="exp lane" />
           </a>
           <h2>EXP Lane</h2>
           <p>
@@ -206,7 +206,7 @@
       <div class="container">
         <div>
           <a id="jgl"
-            ><img class="icon" src="/images/lines/jgl.png" alt="jungle"
+            ><img class="icon" src="images/lines/jgl.png" alt="jungle"
           /></a>
           <h2>Jungle</h2>
           <p>
@@ -239,7 +239,7 @@
       <div class="container">
         <div>
           <a id="roam">
-            <img class="icon" src="/images/lines/roam.png" alt="roam" />
+            <img class="icon" src="images/lines/roam.png" alt="roam" />
           </a>
           <h2>Roaming</h2>
           <p>
@@ -265,6 +265,6 @@
     </div>
     <!-- main -->
     <footer></footer>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
