--- a/roles.html
+++ b/roles.html
@@ -9,7 +9,7 @@
 
     <title>Roles</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.png" />
-    <link rel="stylesheet" href="style_roles.css" />
+    <link rel="stylesheet" href="./style_roles.css" />
     <link rel="stylesheet" href="style_general.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
