--- a/battlefeild.html
+++ b/battlefeild.html
@@ -9,8 +9,8 @@
 
     <title>Battlefeild</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.png" />
-    <link rel="stylesheet" href="/style_battlefeild.css" />
-    <link rel="stylesheet" href="/style_general.css" />
+    <link rel="stylesheet" href="style_battlefeild.css" />
+    <link rel="stylesheet" href="style_general.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,13 +22,13 @@
     <nav class="navbar">
       <ul>
         <li id="home">
-          <a href="/index.html">Home</a>
+          <a href="./index.html">Home</a>
         </li>
-        <li><a href="/ranks.html">Ranks</a></li>
-        <li><a href="/heroes.html">Heroes</a></li>
-        <li><a href="/roles.html">Roles</a></li>
-        <li class="active"><a href="/battlefeild.html">Battlefield</a></li>
-        <li><a href="/modes.html">Modes</a></li>
+        <li><a href="./ranks.html">Ranks</a></li>
+        <li><a href="./heroes.html">Heroes</a></li>
+        <li><a href="./roles.html">Roles</a></li>
+        <li class="active"><a href="./battlefeild.html">Battlefield</a></li>
+        <li><a href="./modes.html">Modes</a></li>
       </ul>
     </nav>
     <!-- navbar -->
