--- a/modes.html
+++ b/modes.html
@@ -22,7 +22,7 @@
     <nav class="navbar">
       <ul>
         <li id="home">
-          <a href="/index.html">Home</a>
+          <a href="./index.html">Home</a>
         </li>
         <li><a href="./ranks.html">Ranks</a></li>
         <li><a href="./heroes.html">Heroes</a></li>
